--- a/index.html
+++ b/index.html
@@ -9,6 +9,53 @@
     <title>Project Name</title>
 </head>
 <body>
-    
+    <div class="container header">
+        <div class="jumbotron">
+            <h1>Jumbotron heading</h1>
+            <h2 class="h2size">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex nesciunt repellendus inventore corporis earum veniam.</h2>
+        </div>
+    </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-6">
+                <h3>Subheading</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil dolor debitis neque, non consequuntur ipsa dicta possimus.</p>
+            </div>
+            <div class="col-sm-6">
+                <h3>Subheading</h3>
+                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
+                sed diam nonummy nibh euismod tincidunt ut laoreet dolore
+                magna aliquam erat volutpat.</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-6">
+              <h3>Subheading</h3>
+                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
+                sed diam nonummy nibh euismod tincidunt ut laoreet dolore
+                magna aliquam erat volutpat.</p>    
+            </div>
+            <div class="col-sm-6">
+              <h3>Subheading</h3>
+                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
+                sed diam nonummy nibh euismod tincidunt ut laoreet dolore
+                magna aliquam erat volutpat.</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-6">
+                <h3>Subheading</h3>
+                 <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
+                sed diam nonummy nibh euismod tincidunt ut laoreet dolore
+                magna aliquam erat volutpat.</p>
+            </div>
+            <div class="col-sm-6">
+                <h3>Subheading</h3>
+                 <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
+                    sed diam nonummy nibh euismod tincidunt ut laoreet dolore
+                    magna aliquam erat volutpat.</p>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
