added button in jumbotron

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <div class="jumbotron">
             <h1>Jumbotron heading</h1>
             <h2 class="h2size">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex nesciunt repellendus inventore corporis earum veniam.</h2>
+            <button>Sign up today</button>
         </div>
     </div>
     <div class="container">
