--- a/index.html
+++ b/index.html
@@ -10,10 +10,18 @@
 </head>
 <body>
     <div class="container header">
+        <h3>Project name</h3> 
+        <nav class="navbar">
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
         <div class="jumbotron">
             <h1>Jumbotron heading</h1>
             <h2 class="h2size">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex nesciunt repellendus inventore corporis earum veniam.</h2>
-            <button>Sign up today</button>
+            <center><button class="btn-primary" id="JTbtn">Sign up today</button></center>
         </div>
     </div>
     <div class="container">
