--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container header">
         <h3>Project name</h3> 
-        <nav class="navbar">
+        <nav class="navbar navbar-right">
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
@@ -65,6 +65,7 @@
                     magna aliquam erat volutpat.</p>
             </div>
         </div>
+    <div class="footer"><p>C Company 19BC</p></div>
     </div>
 </body>
 </html>
