--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 <body>
     <div class="container header">
         <h3>Project name</h3> 
-        <nav class="navbar navbar-right">
+        <nav class="navbar navbar-pills float right">
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li class="nav-item"><a nav-link="index.html">Home</a></li>
+                <li class="nav-item"><a nav-link="about.html">About</a></li>
+                <li class="nav-item"><a nav-link="contact.html">Contact</a></li>
             </ul>
         </nav>
         <div class="jumbotron">
