--- a/index.html
+++ b/index.html
@@ -9,63 +9,29 @@
     <title>Project Name</title>
 </head>
 <body>
-    <div class="container header">
-        <h3>Project name</h3> 
-        <nav class="navbar navbar-pills float right">
-            <ul>
-                <li class="nav-item"><a nav-link="index.html">Home</a></li>
-                <li class="nav-item"><a nav-link="about.html">About</a></li>
-                <li class="nav-item"><a nav-link="contact.html">Contact</a></li>
+<div class="container">
+    <div class="header">
+        <nav>
+            <ul class="nav nav-pills float-right">
+                <li class="nav-item" id="nav"> <a href="nav-link">Home</a> </li>
+                <li class="nav-item" id="nav"> <a href="nav-link">About</a> </li>
+                <li class="nav-item" id="nav"> <a href="nav-link">Contact</a> </li>
             </ul>
         </nav>
-        <div class="jumbotron">
-            <h1>Jumbotron heading</h1>
-            <h2 class="h2size">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex nesciunt repellendus inventore corporis earum veniam.</h2>
-            <center><button class="btn-primary" id="JTbtn">Sign up today</button></center>
-        </div>
+    <h3>Project name</h3>
     </div>
-    <div class="container">
-        <div class="row">
-            <div class="col-sm-6">
-                <h3>Subheading</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil dolor debitis neque, non consequuntur ipsa dicta possimus.</p>
-            </div>
-            <div class="col-sm-6">
-                <h3>Subheading</h3>
-                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
-                sed diam nonummy nibh euismod tincidunt ut laoreet dolore
-                magna aliquam erat volutpat.</p>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-sm-6">
-              <h3>Subheading</h3>
-                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
-                sed diam nonummy nibh euismod tincidunt ut laoreet dolore
-                magna aliquam erat volutpat.</p>    
-            </div>
-            <div class="col-sm-6">
-              <h3>Subheading</h3>
-                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
-                sed diam nonummy nibh euismod tincidunt ut laoreet dolore
-                magna aliquam erat volutpat.</p>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-sm-6">
-                <h3>Subheading</h3>
-                 <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
-                sed diam nonummy nibh euismod tincidunt ut laoreet dolore
-                magna aliquam erat volutpat.</p>
-            </div>
-            <div class="col-sm-6">
-                <h3>Subheading</h3>
-                 <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
-                    sed diam nonummy nibh euismod tincidunt ut laoreet dolore
-                    magna aliquam erat volutpat.</p>
-            </div>
-        </div>
-    <div class="footer"><p>C Company 19BC</p></div>
+    <div class="jumbotron"><center><h1>Jumbotron Heading</h1></center>
+        <center><p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
+        sed diam nonummy nibh euismod tincidunt ut laoreet dolore
+        magna aliquam erat volutpat. Ut wisi enim ad minim veniam,
+        quis nostrud exerci tation ullamcorper suscipit lobortis nisl
+        ut aliquip ex ea commodo consequat. Duis autem vel eum iriure
+        dolor in hendrerit in vulputate velit esse molestie consequat,
+        vel illum dolore eu feugiat nulla facilisis at vero eros et
+        accumsan et iusto odio dignissim qui blandit praesent luptatum
+        zzril delenit augue duis dolore te feugait nulla facilisi.</p></center>
+        <center><button class="btn-primary">Sign up today</button></center>
     </div>
+</div>
 </body>
 </html>
