--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             quis nostrud exerci tation ullamcorper suscipit lobortis nisl
             ut aliquip ex ea commodo consequat.</p></div>
     </div>
-    <footer><p class="footer">C Company 19BC</p></footer>
+    <footer><p class="footer">&#169; Company 2019</p></footer>
 </div>
 </body>
 </html>
