--- a/index.html
+++ b/index.html
@@ -4,23 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" type="text/css" />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" type="text/css" />
     <link rel="stylesheet" href="main.css">
     <title>Project Name</title>
 </head>
 <body>
 <div class="container">
-    <div class="header">
+    <div class="header clearfix">
         <nav>
             <ul class="nav nav-pills float-right">
-                <li class="nav-item" id="nav"> <a href="nav-link">Home</a> </li>
-                <li class="nav-item" id="nav"> <a href="nav-link">About</a> </li>
-                <li class="nav-item" id="nav"> <a href="nav-link">Contact</a> </li>
+                <li class="nav-item"> <a href="#" class="nav-link active">Home</a> </li>
+                <li class="nav-item"> <a href="#" class="nav-link">About</a> </li>
+                <li class="nav-item"> <a href="#" class="nav-link">Contact</a> </li>
             </ul>
         </nav>
-    <h3>Project name</h3>
+        <h3>Project name</h3>
     </div>
-    <div class="jumbotron"><center><h1>Jumbotron Heading</h1></center>
+    <div class="jumbotron , jtcenter"><center><h1>Jumbotron Heading</h1></center>
         <center><p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
         sed diam nonummy nibh euismod tincidunt ut laoreet dolore
         magna aliquam erat volutpat. Ut wisi enim ad minim veniam,
