--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zxx">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -20,13 +20,13 @@
         </nav>
         <h3>Project name</h3>
     </div>
-    <div class="jumbotron , jtcenter"><center><h1>Jumbotron Heading</h1></center>
-        <center><p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
+    <div class="jumbotron , jtcenter"><h1>Jumbotron Heading</h1>
+        <p class="pcenter">Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
         sed diam nonummy nibh euismod tincidunt ut laoreet dolore
         magna aliquam erat volutpat. Ut wisi enim ad minim veniam,
         quis nostrud exerci tation ullamcorper suscipit lobortis nisl
-        ut aliquip ex ea commodo consequat.</p></center>
-        <center><button class="btn btn-success">Sign up today</button></center>
+        ut aliquip ex ea commodo consequat.</p>
+        <button class="btn btn-success , btncenter">Sign up today</button>
     </div>
     <div class="row">
         <div class="col-sm-6"><h4>Subheading</h4><p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
