--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </div>
     <div class="jumbotron , jtcenter"><h1>Jumbotron Heading</h1>
         <p class="pcenter">Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
-        sed diam nonummy nibh euismod tincidunt ut laoreet dolore
+        sed diam nonummy nibh euismod tincidunt ut laoreet dolor
         magna aliquam erat volutpat. Ut wisi enim ad minim veniam,
         quis nostrud exerci tation ullamcorper suscipit lobortis nisl
         ut aliquip ex ea commodo consequat.</p>
