--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 
   </head>
 
-  <body>
-    <div class="container">
+  <body class="bodybg">
+    <div class="container bg">
       <div class="header clearfix">
         <nav>
           <ul class="nav nav-pills float-right">
@@ -34,7 +34,7 @@
             </li>
           </ul>
         </nav>
-        <h3 class="text-muted">Project name</h3>
+        <h3 class="text-muted"><strong>Home</strong></h3>
       </div>
 
       <div class="jumbotron">
